--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<description>demo project for CI</description>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.login>squ_07c13a72d0049aa208829ba374a1c6c8f745a402</sonar.login>
 	</properties>
 	<dependencies>
 		<dependency>
