--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,16 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<url>http://localhost:8001/manager/text</url>
+					<server>TomcatServer</server>
+					<path>/ci</path>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
