--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:8001/manager/text</url>
+					<url>http://localhost:9095</url>
 					<server>TomcatServer</server>
 					<path>/ci</path>
 				</configuration>
