--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
 				<configuration>
-					<url>http://localhost:9095</url>
+					<url>http://localhost:9095/manager/text</url>
 					<server>TomcatServer</server>
-					<path>/ci</path>
+<!--					<path>/ci</path>-->
 				</configuration>
 			</plugin>
 		</plugins>
